# ChatBot_Python

./: README.md  chatbot_multi.py  example1.py  requirements.txt
OCR/Example/: README.md  example_OCR.py
OCR/api/: README.md  app.py  requirements.txt.txt
langchain/: chatbot_multi.py  example2.py  requirements.txt
langserver/: pyproject.toml
langserver/my-app/: pyproject.toml  requirements.txt
langserver/my-app/app/: server.py  server_ex1.py  server_pdf_chat.py  server_rag.py
rag/: Tutorial_RAG.py
scrapping/: example.py
